--- a/Juego/index.html
+++ b/Juego/index.html
@@ -11,10 +11,6 @@
 <body>
     <div class="button">Snake</div>
     <link async href="https://fonts.googleapis.com/css?family=Warnes" data-generated="http://enjoycss.com" rel="stylesheet" type="text/css"/>
-    <canvas id="board"></canvas>
-    <div class="buttonRetry">Retry</div>
-    <section>
-        <a href="#" class="btn"><span>Retry</span></a>
-    </section>
+            <div class="carta"><canvas id="board"></canvas></div>
 </body>
 </html>
