--- a/Pagina de inicio/index.html
+++ b/Pagina de inicio/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto boton</title>
+    <title>Snake Game</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    <a href="C:\Users\RICARDO RUIZ\Documents\Proyectos programacion\Proyecto Snake\Juego\index.html" class="btn"><span>Boton</span></a>
+    <a href="C:\Users\RICARDO RUIZ\Documents\Proyectos programacion\Proyecto Snake\Juego\index.html" class="btn"><span>Play</span></a>
     <div>
         <script src="index.js"></script>
     </div>
     <div class="container">
         <img src="imagenes/snake image.png" alt="imagen de serpiente">
     </div>
-    
 </body>
 </html>
